tests/parser-test-files/define-instance.txt
================================================================================
1 Define instance
================================================================================

(package coalton-unit-tests)

(define-class (C :a))

(define-instance (C :a))

================================================================================
2 Define instance
================================================================================

(package coalton-unit-tests)

(define-class (C :a :b))

(define-instance (C :a :b))

================================================================================
3 Define instance
================================================================================

(package coalton-unit-tests)

(define-class (C :a))

(define-class (C2 :a :b))

(define-instance (C :a => C2 :b :c))

================================================================================
4 Define instance
================================================================================

(package coalton-unit-tests)

(define-class (C :a))

(define-class (C2 :a :b))

(define-instance ((C :a) (C :b) => C2 :a :b))

================================================================================
5 Define instance
================================================================================

(package coalton-unit-tests/prelude
  (import coalton-prelude))

(define-class (M :a)
  (f (:a -> UFix)))

(define-instance (M :a)
  (define (f x) 1))

================================================================================
6 Define instance
================================================================================

(package coalton-unit-tests/define-instance-6
  (import coalton-prelude))

(define-class (C :a)
  (f (:a -> :a))
  (g :a))

(define-instance (Num :a => C :a)
  (define (f x) 1)
  (define g 1))

================================================================================
7 Define instance
================================================================================

(package coalton-unit-tests)

(define-class (C :a))

(define-instance (C :a => (C (List :a))))

================================================================================
8 Define instance
================================================================================

(package coalton-unit-tests)

(define-class (C :a))

(define-instance ((C :a) => (C (List :a))))

================================================================================
9 Define instance
================================================================================

(package coalton-unit-tests/prelude
  (import coalton-prelude))

(define-type C X Y Z)

(define-instance (Eq C)
  (define (== _ _) True))

================================================================================
100 Malformed method definition
================================================================================

(package test-package)

(define-instance (C :a)
  5)

--------------------------------------------------------------------------------

error: Malformed method definition
  --> test:4:2
   |
 3 |  (define-instance (C :a)
   |                   ------ when parsing instance
 4 |    5)
   |    ^ expected list

================================================================================
101 Malformed method definition
================================================================================

(package test-package)

(define-instance (C :a)
  (1 2 . 3))

--------------------------------------------------------------------------------

error: Malformed method definition
  --> test:4:2
   |
 3 |  (define-instance (C :a)
   |                   ------ when parsing instance
 4 |    (1 2 . 3))
   |    ^^^^^^^^^ unexpected dotted list

================================================================================
102 Malformed method definition
================================================================================

(package test-package)

(define-instance (C :a)
  (f x y))

--------------------------------------------------------------------------------

error: Malformed method definition
  --> test:4:3
   |
 3 |  (define-instance (C :a)
   |                   ------ when parsing instance
 4 |    (f x y))
   |     ^ expected method definition

================================================================================
103 Malformed method definition
================================================================================

(package test-package)

(define-instance (C :a)
  (define))

--------------------------------------------------------------------------------

error: Malformed method definition
  --> test:4:2
   |
 3 |  (define-instance (C :a)
   |                   ------ when parsing instance
 4 |    (define))
   |    ^^^^^^^^ expected definition name

================================================================================
104 Malformed instance definition
================================================================================

(package test-package)

(define-instance (C :a . :b))

--------------------------------------------------------------------------------

error: Malformed instance definition
  --> test:3:17
   |
 3 |  (define-instance (C :a . :b))
   |                   ^^^^^^^^^^^ unexpected dotted list

================================================================================
105 Malformed instance definition
================================================================================

(package test-package)

(define-instance 5)

--------------------------------------------------------------------------------

error: Malformed instance definition
  --> test:3:17
   |
 3 |  (define-instance 5)
   |                   ^ expected a list

================================================================================
106 Malformed instance definition
================================================================================

(package test-package)

(define-instance)

--------------------------------------------------------------------------------

error: Malformed instance definition
  --> test:3:17
   |
 3 |  (define-instance)
   |                  ^ expected an instance head

================================================================================
107 Malformed instance head
================================================================================

(package test-package)

(define-instance (=> C :a :b))

--------------------------------------------------------------------------------

error: Malformed instance head
  --> test:3:18
   |
 3 |  (define-instance (=> C :a :b))
   |                    ^^ unexpected `=>`
help: remove the `=>`
 3 | (define-instance ( C :a :b))
   |                   

================================================================================
108 Malformed instance head
================================================================================

(package test-package)

(define-instance (C :a :b =>))

--------------------------------------------------------------------------------

error: Malformed instance head
  --> test:3:26
   |
 3 |  (define-instance (C :a :b =>))
   |                            ^^ unexpected `=>`
help: remove the `=>`
 3 | (define-instance (C :a :b ))
   |                           

================================================================================
109 Invalid attribute for define-instance
================================================================================

(package test-package)

(repr :enum)
(define-instance (C :a))

--------------------------------------------------------------------------------

error: Invalid attribute for define-instance
  --> test:3:0
   |
 3 |  (repr :enum)
   |  ^^^^^^^^^^^^ define-instance cannot have attributes
 4 |  (define-instance (C :a))
   |                   ------ while parsing define-instance

================================================================================
110 Malformed instance definition
================================================================================

(package test-package)

(define-instance (C :a => (C (List :a)) :b))

--------------------------------------------------------------------------------

error: Malformed instance definition
  --> test:3:40
   |
 3 |  (define-instance (C :a => (C (List :a)) :b))
   |                                          ^^ unexpected form
